add tlab code